--- a/inst/rmarkdown/templates/rtm0D/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/rtm0D/skeleton/skeleton.Rmd
@@ -20,15 +20,17 @@ This template file contains a simple box model describing the dynamics of molecu
 
 * O$_2$ and BOD are removed due to BOD decay (O$_2$:BOD stoichiometry of 1:1),
 * BOD decay is a first-order process with respect to BOD ($k_{Decay} = 0.05~d^{-1}$) and depends on O$_2$ according to the Michaelis-Menten kinetics ($K_{O2}=0.001~mol~m^{-3}$),
-* O$_2$ is added by air-water exchange ($k_{Aeration}=0.1~d^{-1}$, O$_{2,sat} = 0.3~mol~m^{-3}$),
-* DOB is added at a constant rate ($0.001~mol~m^{-3}~d^{-1}$),
-* initial concentrations are O$_{2,ini}=0.25~mol~m^{-3}$ and BOD$_{ini} = 0.5~mol~m^{-3}$.
+* O$_2$ is added by air-water exchange ($k_{Aeration}=0.1~d^{-1}$, $O_{2,sat} = 0.3~mol~m^{-3}$),
+* BOD is added at a constant rate ($0.001~mol~m^{-3}~d^{-1}$),
+* initial concentrations are $O_{2,ini}=0.25~mol~m^{-3}$ and $BOD_{ini} = 0.5~mol~m^{-3}$.
 
 # Model definition
 
 ```{r, eval = TRUE, cache = FALSE, echo = TRUE, warning=FALSE, message=FALSE}
+# units: time=days, amount=moles, concentration=mol/m3
+
 # Initial conditions of the state variables
-yini <- c(O2 = 0.25, BOD = 0.5) # both in [mol/m3]
+state.ini <- c(O2 = 0.25, BOD = 0.5) # both in [mol/m3]
 
 # Model parameters
 pars <- c(
@@ -40,21 +42,21 @@ pars <- c(
 )
 
 # Model function: calculates time-derivatives and other output
-BODmodel <-function(t, state, pars) { 
-  # t: time, state: state variables, pars: model parameters
-  with (as.list(c(state, pars)),{
+BODmodel <-function(t, state, parms) { 
+  # t: time, state: state variables at time t, parms: model parameters
+  with (as.list(c(state, parms)),{
  
-  # rate expressions [mol/m3/d]
+    # rate expressions [mol/m3/d]
     Decay      <- kDecay * BOD * O2/(O2+K.O2) # BOD decay
     Aeration   <- kAeration * (satO2-O2)      # air-water exchange
 
-  # Time-derivatives: dC/dt = production - consumption [mol/m3/d]
+    # Time-derivatives: dC/dt = production - consumption [mol/m3/d]
     dO2.dt      <- Aeration - Decay
     dBOD.dt     <- inputBOD - Decay
 
-  # return time-derivatives and ordinary variables as a list     
+    # return time-derivatives and ordinary variables as a list     
     return(list(c(dO2.dt, dBOD.dt), # vector with derivatives 
-                           # (the same order as state variables!)
+                                    # (the same order as state variables!)
       # other output: process rates
       Decay    = Decay,
       Aeration = Aeration))    
@@ -74,14 +76,14 @@ require(deSolve)  # package with integration methods
 outtimes <- seq(from = 1, to = 100, length.out = 100) # vector of output times
 
 # ode integrates the model
-out <- ode(y = yini, parms = pars, func = BODmodel, times = outtimes)                
+out <- ode(y = state.ini, parms = pars, func = BODmodel, times = outtimes)                
 
 # change the value of the reaeration rate constant
-pars2      <- pars              # copy the original parameter vector
-pars2["kAeration"] <- pars["kAeration"]/10 # 10-fold lower kAeration
+pars2      <- pars                          # copy the original parameter vector
+pars2["kAeration"] <- pars2["kAeration"]/10 # 10-fold lower kAeration
 
 # integrate the model with the new parameters
-out2 <- ode(y = yini, parms = pars2, func = BODmodel, times = outtimes)                
+out2 <- ode(y = state.ini, parms = pars2, func = BODmodel, times = outtimes)                
 ```
 
 ```{r, eval=FALSE}
@@ -93,7 +95,7 @@ We plot both solutions in one graph:
 
 ```{r, fig.height = 6, fig.width = 6, fig.align='center'}
 plot(out, out2, xlab="time (days)", las=1, lwd=2,
-     ylab=list("mol/m3","mol/m3","mol/m3/d","mol/m3/d"))
+     ylab=list("molO2/m3","molBOD/m3","molBOD/m3/d","molO2/m3/d"))
 legend("topright", legend = c("original", "10-fold lower"),
        title="aeration rate constant:", 
        col=1:2, lwd=2, lty=1:2, bty="n")
@@ -105,7 +107,7 @@ We find the steady-state solution:
 
 ```{r, message=FALSE}
 require(rootSolve) # package with solution methods
-std <- steady(y = yini, parms = pars, func = BODmodel, 
+std <- steady(y = state.ini, parms = pars, func = BODmodel, 
               positive = TRUE) # to ensure that the solution is positive
 std$y
 ```
@@ -113,7 +115,7 @@ std$y
 Sometimes, it may happen that there are *multiple* steady state solutions to a model (e.g., one with non-zero values, another one with zero values). In this case, the ``steady`` function is unable to "decide" which one to choose and stops with an error. To overcome this error, use the function ``runsteady`` instead to find the steady state solution.
 
 ```{r, message=FALSE}
-std <- runsteady(y = yini, parms = pars, func = BODmodel)
+std <- runsteady(y = state.ini, parms = pars, func = BODmodel)
 std$y
 ```
 
@@ -131,7 +133,7 @@ for (i in 1:length(k.seq)){
   p <- pars
   p["kAeration"] <- k.seq[i]  # reaeration rate constant based on the sequence
   # steady-state with new parameter values
-  std <- steady(y = yini, parms = p, func = BODmodel, positive = TRUE)  
+  std <- steady(y = state.ini, parms = p, func = BODmodel, positive = TRUE)  
   BOD.seq[i] <- std$y["BOD"]
   O2.seq[i]  <- std$y["O2"]
 }
@@ -141,8 +143,8 @@ Finally, we plot the results of the sensitivity analysis:
 
 ```{r, fig.width=7, fig.height=3.5}
 par(mfrow=c(1,2)) # figures in 1 row, 2 columns
-plot(k.seq, O2.seq,  type="l", xlab="kAeration [/d]", main="O2",  ylab="mol/m3")
-plot(k.seq, BOD.seq, type="l", xlab="kAeration [/d]", main="BOD", ylab="mol/m3")
+plot(k.seq, O2.seq,  type="l", xlab="kAeration [/d]", main="O2",  ylab="molO2/m3")
+plot(k.seq, BOD.seq, type="l", xlab="kAeration [/d]", main="BOD", ylab="molBOD/m3")
 ```
 
 # References
